--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "orders_inventory", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+sqlmodel = "^0.0.14"
+sqlalchemy = "^2.0.0"
+pydantic = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
