--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.8"
 sqlmodel = "^0.0.14"
 sqlalchemy = "^2.0.0"
 pydantic = "^2.0.0"
+fastapi = "^0.104.0"
+uvicorn = {extras = ["standard"], version = "^0.24.0"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
