--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ uvicorn = {extras = ["standard"], version = "^0.24.0"}
 pytest = "^7.0"
 black = "^23.0"
 flake8 = "^6.0"
+locust = "^2.17.0"
+faker = "^20.1.0"
 
 [build-system]
 requires = ["poetry-core"]
