--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-uvicorn
-requests
-sqlmodel
-sqlalchemy
-pydantic
+# Production requirements for Render deployment
+fastapi==0.104.0
+uvicorn[standard]==0.24.0
+sqlmodel==0.0.14
+sqlalchemy==2.0.0
+pydantic==2.0.0
+python-multipart==0.0.6
