--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,54 @@
-# Production requirements for Render deployment
-fastapi==0.104.0
-uvicorn[standard]==0.24.0
-sqlmodel==0.0.14
-sqlalchemy==2.0.0
-pydantic==2.0.0
+annotated-types==0.7.0
+    # via pydantic
+anyio==3.7.1
+    # via
+    #   fastapi
+    #   starlette
+    #   watchfiles
+click==8.2.1
+    # via uvicorn
+fastapi==0.104.1
+    # via -r requirements.in
+h11==0.16.0
+    # via uvicorn
+httptools==0.6.4
+    # via uvicorn
+idna==3.10
+    # via anyio
+pydantic==2.5.2
+    # via
+    #   -r requirements.in
+    #   fastapi
+    #   sqlmodel
+pydantic-core==2.14.5
+    # via pydantic
+python-dotenv==1.1.1
+    # via uvicorn
 python-multipart==0.0.6
+    # via -r requirements.in
+pyyaml==6.0.2
+    # via uvicorn
+sniffio==1.3.1
+    # via anyio
+sqlalchemy==2.0.23
+    # via
+    #   -r requirements.in
+    #   sqlmodel
+sqlmodel==0.0.14
+    # via -r requirements.in
+starlette==0.27.0
+    # via fastapi
+typing-extensions==4.8.0
+    # via
+    #   fastapi
+    #   pydantic
+    #   pydantic-core
+    #   sqlalchemy
+uvicorn[standard]==0.24.0
+    # via -r requirements.in
+uvloop==0.21.0
+    # via uvicorn
+watchfiles==1.1.0
+    # via uvicorn
+websockets==15.0.1
+    # via uvicorn
