fix: Resolve maturin build errors on Render
- Add requirements-simple.txt with flexible Pydantic version range
- Update build command to avoid Rust compilation issues
- Use pip install with setuptools and wheel for better compatibility
- Switch from exact pydantic-core version to range-based pydantic
- Avoid maturin compilation errors by using pre-built wheels
- Ensure Render deployment succeeds without build tool conflicts

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: orders-inventory-api
     runtime: python3
-    buildCommand: pip install poetry && poetry config virtualenvs.create false && poetry install --only=main
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements-simple.txt
     startCommand: uvicorn src.orders_inventory.api.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
