--- a/requirements-simple.txt
+++ b/requirements-simple.txt
@@ -1,7 +1,8 @@
-# Simplified requirements for Render deployment
+# Simplified requirements for Render deployment - stable versions
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 sqlmodel==0.0.14
 sqlalchemy==2.0.23
-pydantic>=2.4.0,<3.0.0
+pydantic==2.5.2
 python-multipart==0.0.6
+typing-extensions==4.8.0
