--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: orders-inventory-api
     runtime: python3
-    buildCommand: pip install --upgrade pip==25.2 && pip install fastapi==0.104.1 uvicorn==0.24.0 sqlmodel==0.0.14 sqlalchemy==2.0.23 pydantic==2.5.2
-    startCommand: uvicorn src.orders_inventory.api.main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install --upgrade pip && pip install --only-binary=:all: -r requirements-render.txt
+    startCommand: uvicorn simple_main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
