fix: Remove SQLAlchemy from minimal requirements
- SQLAlchemy 1.4.48 no longer available on PyPI
- Simple in-memory app doesn't need database dependencies
- Keep only essential FastAPI and Uvicorn for deployment
- Eliminate all potential dependency conflicts

--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -1,5 +1,4 @@
 # Ultra minimal requirements for Render - avoiding Rust compilation
 fastapi==0.95.2
 uvicorn==0.20.0
-sqlalchemy==1.4.48
-# No pydantic 2.x to avoid pydantic-core Rust compilation
+# SQLAlchemy not needed for simple in-memory app
