--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: orders-inventory-api
     runtime: python3
-    buildCommand: pip install --upgrade pip && pip install --only-binary=:all: -r requirements-render.txt
-    startCommand: uvicorn simple_main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install fastapi==0.95.2 uvicorn==0.20.0
+    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
